Code of conduct dark mode text color fixed

--- a/src/app/components/code-of-conduct/code-of-conduct.component.css
+++ b/src/app/components/code-of-conduct/code-of-conduct.component.css
@@ -9,4 +9,5 @@ h2,
 h3,
 p {
   text-align: justify;
+  color: var(--text-color-primary)
 }
